[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/resources/arpeegee_pins/pin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/resources/arpeegee_pins/paladin.tres" type="Resource" id=2]
[ext_resource path="res://lut/components/root_sprite.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/paladin/paladin_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/paladin/paladin_hurt.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/paladin/paladin_magic.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/paladin/paladin_dead.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/paladin/paladin_attack.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/paladin/paladin_attack_magic.png" type="Texture" id=9]
[ext_resource path="res://src/resources/arpeegee_pins/actions/actions.gd" type="Script" id=10]
[ext_resource path="res://src/resources/arpeegee_pins/actions/attack.gd" type="Script" id=11]
[ext_resource path="res://src/resources/actions/heavenly_slash_paladin.tres" type="Resource" id=12]
[ext_resource path="res://assets/shaders/wobble_noise.tres" type="Texture" id=13]
[ext_resource path="res://assets/shaders/pin_sprite_shader.gdshader" type="Shader" id=14]
[ext_resource path="res://src/resources/arpeegee_pins/actions/multi_attack.gd" type="Script" id=15]
[ext_resource path="res://src/resources/actions/tremendous_slash_paladin.tres" type="Resource" id=16]
[ext_resource path="res://src/resources/arpeegee_pins/actions/general_self_buff.gd" type="Script" id=17]
[ext_resource path="res://src/resources/actions/bright_sparkles_paladin.tres" type="Resource" id=18]
[ext_resource path="res://src/resources/arpeegee_pins/actions/heal_generic.gd" type="Script" id=19]
[ext_resource path="res://src/resources/arpeegee_pins/actions/slippable.gd" type="Script" id=20]
[ext_resource path="res://assets/sprites/paladin/paladin_tremendous.png" type="Texture" id=21]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 14 )
shader_param/fill_color = Color( 1, 1, 1, 1 )
shader_param/color_mix = 0.0
shader_param/top_skew = 0.0
shader_param/squash = 1.0
shader_param/offset_amount = 100.0
shader_param/update_sec = 0.4
shader_param/uv_offset_texture = ExtResource( 13 )

[node name="Paladin" instance=ExtResource( 1 )]
nice_name = "Paladin"
_resource_set = ExtResource( 2 )

[node name="DamageReceiver" parent="." index="6"]
sprite_name = "hit"

[node name="Health" parent="." index="7"]
current = 20

[node name="PinStats" parent="." index="8"]
attack = 3
magic_attack = 0
defence = 3
magic_defence = 2
evasion = 2

[node name="Sprites" type="Node2D" parent="." index="12"]
material = SubResource( 1 )
script = ExtResource( 3 )

[node name="Idle" type="Sprite" parent="Sprites" index="0"]
use_parent_material = true
position = Vector2( -14, -90 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 4 )

[node name="Hit" type="Sprite" parent="Sprites" index="1"]
visible = false
use_parent_material = true
position = Vector2( 7, -89 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 5 )

[node name="Attack" type="Sprite" parent="Sprites" index="2"]
visible = false
use_parent_material = true
position = Vector2( -43, -80 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 8 )

[node name="Slash" type="Sprite" parent="Sprites" index="3"]
visible = false
use_parent_material = true
position = Vector2( -48, -94 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 21 )

[node name="MagicHeal" type="Sprite" parent="Sprites" index="4"]
visible = false
use_parent_material = true
position = Vector2( -29, -98 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 6 )

[node name="MagicSparkles" type="Sprite" parent="Sprites" index="5"]
visible = false
use_parent_material = true
position = Vector2( -27, -97 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 9 )

[node name="Dead" type="Sprite" parent="Sprites" index="6"]
visible = false
use_parent_material = true
position = Vector2( -2.38419e-07, -81 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 7 )

[node name="Actions" type="Node2D" parent="." index="13"]
script = ExtResource( 10 )

[node name="HeavenlySlash" type="Node2D" parent="Actions" index="0"]
script = ExtResource( 11 )
pin_action = ExtResource( 12 )
narration_key = "NARRATOR_HEAVENLY_SLASH_USE"

[node name="ImpactHint" type="Position2D" parent="Actions/HeavenlySlash" index="0"]
position = Vector2( -103, -99 )

[node name="Slippable" type="Node" parent="Actions/HeavenlySlash" index="1"]
script = ExtResource( 20 )

[node name="TremendousSlash" type="Node2D" parent="Actions" index="1"]
script = ExtResource( 15 )
pin_action = ExtResource( 16 )
attack_frame = "slash"
narration_key_single = "NARRATOR_TREMENDOUS_SLASH_USE_ONE_ENEMY"
narration_key_multi = "NARRATOR_TREMENDOUS_SLASH_USE_MULTIPLE_ENEMIES"

[node name="ImpactHint" type="Position2D" parent="Actions/TremendousSlash" index="0"]
position = Vector2( -103, -99 )

[node name="Slippable" type="Node" parent="Actions/TremendousSlash" index="1"]
script = ExtResource( 20 )

[node name="BrightSparkles" type="Node2D" parent="Actions" index="2"]
script = ExtResource( 17 )
pin_action = ExtResource( 18 )
use_frame = "magicsparkles"
use_vfx_call = "bright_sparkles"
effect_call = "bright_sparkles"
narration_key = "NARRATOR_BRIGHT_SPARKLES_USE"

[node name="HolySparkles" type="Node2D" parent="Actions" index="3"]
script = ExtResource( 19 )
frame = "magicheal"
