[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/resources/arpeegee_pins/pin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/resources/arpeegee_pins/ranger.tres" type="Resource" id=2]
[ext_resource path="res://assets/sprites/ranger/ranger_idle.png" type="Texture" id=3]
[ext_resource path="res://src/resources/arpeegee_pins/actions/actions.gd" type="Script" id=4]
[ext_resource path="res://lut/components/root_sprite.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/ranger/ranger_hit.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ranger/ranger_attack.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ranger/ranger_attack_air1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ranger/ranger_win.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ranger/ranger_dead.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ranger/ranger_attack_air2.png" type="Texture" id=11]
[ext_resource path="res://src/resources/arpeegee_pins/actions/shoot_arrow_ranger.gd" type="Script" id=12]
[ext_resource path="res://assets/sprites/effects/ranger_arrow.png" type="Texture" id=13]
[ext_resource path="res://assets/shaders/pin_sprite_shader.gdshader" type="Shader" id=14]
[ext_resource path="res://assets/shaders/wobble_noise.tres" type="Texture" id=15]
[ext_resource path="res://assets/sprites/effects/ranger_firearrow.png" type="Texture" id=16]
[ext_resource path="res://src/resources/arpeegee_pins/actions/rain_from_above_ranger.gd" type="Script" id=17]
[ext_resource path="res://src/resources/arpeegee_pins/actions/magic_ghost_sword_ranger.gd" type="Script" id=18]
[ext_resource path="res://src/resources/arpeegee_pins/actions/heal_generic.gd" type="Script" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 14 )
shader_param/fill_color = Color( 1, 1, 1, 1 )
shader_param/color_mix = 0.0
shader_param/top_skew = 0.0
shader_param/squash = 1.0
shader_param/offset_amount = 70.0
shader_param/update_sec = 0.4
shader_param/uv_offset_texture = ExtResource( 15 )

[node name="Ranger" instance=ExtResource( 1 )]
nice_name = "Ranger"
_resource_set = ExtResource( 2 )

[node name="Health" parent="." index="7"]
current = 20

[node name="PinStats" parent="." index="8"]
attack = 4
magic_attack = 0
defence = 2
magic_defence = 3
evasion = 4

[node name="HealthBar" parent="." index="11"]
position = Vector2( -10, -266 )

[node name="Sprites" type="Node2D" parent="." index="12"]
material = SubResource( 1 )
script = ExtResource( 5 )

[node name="Idle" type="Sprite" parent="Sprites" index="0"]
use_parent_material = true
position = Vector2( -74, -185 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 3 )
centered = false

[node name="Hurt" type="Sprite" parent="Sprites" index="1"]
visible = false
use_parent_material = true
position = Vector2( -104, -224 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 6 )
centered = false

[node name="Attack" type="Sprite" parent="Sprites" index="2"]
visible = false
use_parent_material = true
position = Vector2( -94, -215 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 7 )
centered = false

[node name="AttackAir1" type="Sprite" parent="Sprites" index="3"]
visible = false
use_parent_material = true
position = Vector2( -100, -213 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 8 )
centered = false

[node name="AttackAir2" type="Sprite" parent="Sprites" index="4"]
visible = false
use_parent_material = true
position = Vector2( -103, -214 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 11 )
centered = false

[node name="Win" type="Sprite" parent="Sprites" index="5"]
visible = false
use_parent_material = true
position = Vector2( -110, -213 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 9 )
centered = false

[node name="Dead" type="Sprite" parent="Sprites" index="6"]
visible = false
use_parent_material = true
position = Vector2( -145, -215 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 10 )
centered = false

[node name="Actions" type="Node2D" parent="." index="13"]
script = ExtResource( 4 )

[node name="ArrowZip" type="Node2D" parent="Actions" index="0"]
script = ExtResource( 12 )

[node name="Arrow" type="Node2D" parent="Actions/ArrowZip" index="0"]
visible = false
position = Vector2( -139, -88 )
z_index = 1

[node name="Sprite" type="Sprite" parent="Actions/ArrowZip/Arrow" index="0"]
position = Vector2( 95, -7 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 13 )

[node name="ArrowsEnFuego" type="Node2D" parent="Actions" index="1"]
script = ExtResource( 12 )
type = 1

[node name="Arrow" type="Node2D" parent="Actions/ArrowsEnFuego" index="0"]
visible = false
position = Vector2( -139, -88 )
z_index = 1

[node name="Sprite" type="Sprite" parent="Actions/ArrowsEnFuego/Arrow" index="0"]
position = Vector2( 95, -7 )
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 16 )

[node name="RainFromAbove" type="Node2D" parent="Actions" index="2"]
script = ExtResource( 17 )

[node name="Arrow" type="Node2D" parent="Actions/RainFromAbove" index="0"]
visible = false
position = Vector2( -139, -88 )
z_index = 1

[node name="Sprite" type="Sprite" parent="Actions/RainFromAbove/Arrow" index="0"]
position = Vector2( 150, -48 )
rotation = 1.10559
scale = Vector2( 0.333333, 0.333333 )
texture = ExtResource( 13 )

[node name="MagicGhostSword" type="Node2D" parent="Actions" index="3"]
script = ExtResource( 18 )

[node name="ForestLove" type="Node2D" parent="Actions" index="4"]
script = ExtResource( 19 )
type = 3
frame = "idle"
