[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/resources/arpeegee_pins/pin.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/whitemage/whitemage_idle.png" type="Texture" id=2]
[ext_resource path="res://src/resources/arpeegee_pins/actions/actions.gd" type="Script" id=3]
[ext_resource path="res://lut/components/root_sprite.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/whitemage/whitemage_attack.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/whitemage/whitemage_physical_attack.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/whitemage/whitemage_hit.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/whitemage/whitemage_physical_attack_desperate.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/whitemage/whitemage_dead.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/whitemage/whitemage_win.png" type="Texture" id=10]
[ext_resource path="res://assets/shaders/pin_sprite_shader.gdshader" type="Shader" id=11]
[ext_resource path="res://assets/shaders/wobble_noise.tres" type="Texture" id=12]
[ext_resource path="res://src/resources/arpeegee_pins/actions/attack.gd" type="Script" id=13]
[ext_resource path="res://src/resources/actions/useless_staff_whack_white_mage.tres" type="Resource" id=14]
[ext_resource path="res://src/resources/arpeegee_pins/white_mage.tres" type="Resource" id=15]
[ext_resource path="res://src/resources/arpeegee_pins/actions/slippable.gd" type="Script" id=16]
[ext_resource path="res://src/resources/actions/desperate_staff_whack_white_mage.tres" type="Resource" id=17]
[ext_resource path="res://src/resources/arpeegee_pins/actions/heal_generic.gd" type="Script" id=18]
[ext_resource path="res://src/resources/arpeegee_pins/actions/life2_white_mage.gd" type="Script" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 11 )
shader_param/fill_color = Color( 1, 1, 1, 1 )
shader_param/color_mix = 0.0
shader_param/top_skew = 0.0
shader_param/squash = 1.0
shader_param/offset_amount = 70.0
shader_param/update_sec = 0.4
shader_param/uv_offset_texture = ExtResource( 12 )

[node name="WhiteMage" instance=ExtResource( 1 )]
nice_name = "White Mage"
_resource_set = ExtResource( 15 )

[node name="Health" parent="." index="6"]
current = 20

[node name="PinStats" parent="." index="7"]
magic_attack = 0
defence = 3
magic_defence = 5
evasion = 6

[node name="Sprites" type="Node2D" parent="." index="12"]
material = SubResource( 1 )
script = ExtResource( 4 )

[node name="Idle" type="Sprite" parent="Sprites" index="0"]
use_parent_material = true
position = Vector2( 0, -84 )
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 2 )

[node name="Magic" type="Sprite" parent="Sprites" index="1"]
visible = false
use_parent_material = true
position = Vector2( -9, -76 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Hurt" type="Sprite" parent="Sprites" index="2"]
visible = false
use_parent_material = true
position = Vector2( 0, -84 )
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 7 )

[node name="Attack" type="Sprite" parent="Sprites" index="3"]
visible = false
use_parent_material = true
position = Vector2( -37, -86 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="AttackDesperate" type="Sprite" parent="Sprites" index="4"]
visible = false
use_parent_material = true
position = Vector2( -37, -86 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Dead" type="Sprite" parent="Sprites" index="5"]
visible = false
use_parent_material = true
position = Vector2( -27, -97 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="Win" type="Sprite" parent="Sprites" index="6"]
visible = false
use_parent_material = true
position = Vector2( -15, -78 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 10 )

[node name="Actions" type="Node2D" parent="." index="13"]
script = ExtResource( 3 )

[node name="UselessStaffWhack" type="Node2D" parent="Actions" index="0"]
position = Vector2( -113, -139 )
script = ExtResource( 13 )
pin_action = ExtResource( 14 )
narration_key = "NARRATOR_USELESS_STUFF_WHACK_USE"

[node name="ImpactHint" type="Position2D" parent="Actions/UselessStaffWhack" index="0"]

[node name="Slippable" type="Node" parent="Actions/UselessStaffWhack" index="1"]
script = ExtResource( 16 )

[node name="DesperateStaffWhack" type="Node2D" parent="Actions" index="1"]
script = ExtResource( 13 )
attack_sprite_name = "attackdesperate"
pin_action = ExtResource( 17 )
narration_key = "NARRATOR_DESPERATE_STAFF_WHACK_USE"
attack_factor = 0.0

[node name="ImpactHint" type="Node2D" parent="Actions/DesperateStaffWhack" index="0"]

[node name="Slippable" type="Node" parent="Actions/DesperateStaffWhack" index="1"]
script = ExtResource( 16 )

[node name="Heal3" type="Node2D" parent="Actions" index="2"]
script = ExtResource( 18 )
type = 1
frame = "magic"

[node name="Life2" type="Node2D" parent="Actions" index="3"]
script = ExtResource( 19 )

[node name="MedicinalSparkles" type="Node2D" parent="Actions" index="4"]
script = ExtResource( 18 )
type = 2
frame = "magic"
